Upgrade supporting shaders, and wireframe and fill mode

--- a/OpenGL_LookDevVisor/OpenGL_LookDevVisor.vcxproj.filters
+++ b/OpenGL_LookDevVisor/OpenGL_LookDevVisor.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="Shaders_Manager.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Shaders_Manager.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
