Camera in development

--- a/OpenGL_LookDevVisor/OpenGL_LookDevVisor.vcxproj
+++ b/OpenGL_LookDevVisor/OpenGL_LookDevVisor.vcxproj
@@ -124,10 +124,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shaders_Manager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Shaders_Manager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
