--- a/OpenGL_LookDevVisor/OpenGL_LookDevVisor.vcxproj.filters
+++ b/OpenGL_LookDevVisor/OpenGL_LookDevVisor.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Shaders_Manager.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shaders_Manager.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
