--- a/OpenGL_LookDevVisor/imgui.ini
+++ b/OpenGL_LookDevVisor/imgui.ini
@@ -1,15 +1,25 @@
 [Debug]
-Pos=32,86
-Size=390,315
-Collapsed=0
+Pos=502,78
+Size=544,604
+Collapsed=1
 
 [ImGui Demo]
-Pos=727,178
-Size=550,680
+Pos=573,47
+Size=748,919
 Collapsed=0
 
 [Another Window]
 Pos=226,501
 Size=200,100
+Collapsed=0
+
+[Example: Layout]
+Pos=342,299
+Size=500,440
+Collapsed=0
+
+[ImGui Metrics]
+Pos=126,274
+Size=889,502
 Collapsed=0
 
