--- a/OpenGL_LookDevVisor/imgui.ini
+++ b/OpenGL_LookDevVisor/imgui.ini
@@ -1,12 +1,12 @@
 [Debug]
-Pos=969,309
-Size=544,604
-Collapsed=0
+Pos=400,791
+Size=631,141
+Collapsed=1
 
 [ImGui Demo]
-Pos=487,52
+Pos=752,7
 Size=748,919
-Collapsed=1
+Collapsed=0
 
 [Another Window]
 Pos=226,501
@@ -21,5 +21,10 @@ Collapsed=0
 [ImGui Metrics]
 Pos=126,274
 Size=889,502
+Collapsed=0
+
+[Light Editor]
+Pos=586,297
+Size=550,680
 Collapsed=0
 
