--- a/OpenGL_LookDevVisor/imgui.ini
+++ b/OpenGL_LookDevVisor/imgui.ini
@@ -1,7 +1,7 @@
 [Debug]
-Pos=226,391
+Pos=53,578
 Size=385,277
-Collapsed=0
+Collapsed=1
 
 [ImGui Demo]
 Pos=678,56
@@ -24,7 +24,12 @@ Size=889,502
 Collapsed=0
 
 [Light Editor]
-Pos=474,188
-Size=410,443
+Pos=37,134
+Size=337,517
+Collapsed=0
+
+[Shader Editor]
+Pos=857,132
+Size=394,728
 Collapsed=0
 
