--- a/OpenGL_LookDevVisor/.cproject
+++ b/OpenGL_LookDevVisor/.cproject
@@ -31,7 +31,7 @@
 									<listOptionValue builtIn="false" value="glew.h"/>
 									<listOptionValue builtIn="false" value="glfw3.h"/>
 								</option>
-								<option id="gnu.cpp.compiler.option.dialect.std.2046016193" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++1y" valueType="enumerated"/>
+								<option id="gnu.cpp.compiler.option.dialect.std.2046016193" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++11" valueType="enumerated"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.193262030" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1407325869" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
